# flask_blog

./: .gitignore  Makefile  README.md  app.py  config_sample.json  forms.py  nginx_config_sample  pyproject.toml  run.py  supervisor_config_sample.conf
blog/: __init__.py  forms.py  models.py  routes.py
blog/templates/: about.html  account.html  layout.html  login.html
flask_blog/: __init__.py  config.py  forms.py  models.py  routes.py
flask_blog/main/: routes.py
flask_blog/posts/: routes.py
flask_blog/static/: main.css
flask_blog/templates/: home.html  layout.html  login.html  new_post.html  post.html  register.html  request_password_reset.html  reset_password.html  user_posts.html
flask_blog/templates/errors/: 403.html  404.html  500.html
flask_blog/users/: forms.py  routes.py  utils.py
templates/: home.html  layout.html  register.html
