[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"
flask-sqlalchemy = "^2.4.4"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
