[tool.poetry]
name = "flask_blog"
version = "0.1.0"
description = ""
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-wtf = "^1.2.0"
email_validator = "^1.1.0"
flask-sqlalchemy = "^3.1.0"
flask-bcrypt = "^1.0.0"
flask-login = "^0.6.0"
pillow = "^11.0.0"
flask-mail = "^0.10.0"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry>=1.8.4"]
build-backend = "poetry.masonry.api"
